BEL-33 - fixed by audit - citation and truncate-button.

--- a/web/themes/custom/cool/css/main.css
+++ b/web/themes/custom/cool/css/main.css
@@ -1072,11 +1072,15 @@ form.user-pass input#edit-submit {
   height: 17px;
   display: inline-block;
   padding-left: 26px;
-  color: #1c1c1c;
+  color: #8a2807;
   text-decoration: none !important;
   font-weight: 700;
   font-size: 1.8rem;
   line-height: 16px;
+  cursor: pointer;
+}
+.black-white .citacia h3 {
+  background: url("../../beliana/img/arrow_sprite_white.png") no-repeat;
 }
 
 .citacia.open h3 {
@@ -1114,7 +1118,6 @@ table {
 }
 
 .obsah table {
-  font-size: 13px;
   font-size: 1.3rem;
   border: 0;
   margin-top: 15px;
@@ -1128,7 +1131,6 @@ table {
 }
 
 .obsah table p {
-  font-size: 13px;
   font-size: 1.3rem;
 }
 
@@ -1158,15 +1160,13 @@ table {
   -moz-border-radius: 2px;
   border-radius: 2px;
   background: #f5f5f5;
-  height: 30px;
   display: inline-block;
   white-space: nowrap;
-  font-size: 13px;
   font-size: 1.3rem;
   line-height: 30px;
-  color: #494949
+  color: #494949;
   text-decoration: none;
-  padding: 0 10px;
+  padding: 0;
   margin-top: 0.75em;
   margin-bottom: 0.75em;
   margin-right: 6px;
@@ -1203,7 +1203,7 @@ table {
 .sort-button .dropdown li {
   display: block;
   text-decoration: none;
-  color: #494949
+  color: #494949;
   padding: 0px 10px;
 }
 
@@ -1214,7 +1214,9 @@ table {
 }
 
 /* Active state */
-.truncate-button.active .dropdown,
+.truncate-button .dropdown {
+  pointer-events: auto;
+}
 .sort-button.active .dropdown {
   opacity: 1;
   pointer-events: auto;
